Attempt #3 to fix iPhone 4 spacing issue.

--- a/css/main.css
+++ b/css/main.css
@@ -109,6 +109,7 @@ body {
 
 .social a {
 	display: block;
+	max-height: 2px;
 }
 
 .mystory {
